# legend-pydataobj

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  AGENTS.md  CITATION.cff  MANIFEST.in  README.md  pyproject.toml  setup.cfg
.github/workflows/: main.yml
docs/: Makefile
docs/source/: .py_api_exclude  conf.py  developer.rst  index.rst  tutorials.rst
docs/source/extensions/: numbadoc.py
docs/source/manual/: index.rst  lh5tools.rst
docs/source/notebooks/: Compression.ipynb  DataCompression.ipynb  LH5Files.ipynb  LH5Iterator.ipynb  my_objects.lh5
src/lgdo/: __init__.py  cli.py  detectorid.py  lgdo_utils.py  lh5_store.py  logging.py  units.py  utils.py
src/lgdo/compression/: __init__.py  base.py  generic.py  radware.py  utils.py  varlen.py
src/lgdo/lh5/: __init__.py  concat.py  core.py  datatype.py  exceptions.py  iterator.py  settings.py  store.py  tools.py  truncate.py  utils.py
src/lgdo/lh5/_serializers/: __init__.py  array.py  composite.py  datatype.py  encoded.py  ndarray.py  scalar.py  utils.py  vector_of_vectors.py
src/lgdo/lh5/_serializers/read/: __init__.py  array.py  composite.py  encoded.py  ndarray.py  scalar.py  utils.py  vector_of_vectors.py
src/lgdo/lh5/_serializers/write/: __init__.py  array.py  composite.py  scalar.py  vector_of_vectors.py
src/lgdo/types/: __init__.py  array.py  arrayofdetectorids.py  arrayofequalsizedarrays.py  arrow.py  encoded.py  fixedsizearray.py  histogram.py  lgdo.py  scalar.py  struct.py  table.py  vectorofvectors.py  vovutils.py  waveform_table.py  waveformtable.py
tests/: conftest.py  test_cli.py  test_core.py  test_detectorid.py  test_lgdo_utils.py  test_lh5_iterator.py  test_lh5_store.py
tests/compression/: conftest.py  test_compression.py  test_radware_sigcompress.py  test_str2wfcodec.py  test_uleb128_zigzag_diff.py
tests/lh5/: conftest.py  test_concat.py  test_core.py  test_exceptions.py  test_lh5_datatype.py  test_lh5_iterator.py  test_lh5_store.py  test_lh5_tools.py  test_lh5_utils.py  test_lh5_write.py  test_pathlib.py  test_truncate.py
tests/types/: test_array.py  test_arrayofdetectorids.py  test_arrayofequalsizedarrays.py  test_arrow.py  test_encoded.py  test_fixedsizearray.py  test_histogram.py  test_representations.py  test_scalar.py  test_struct.py  test_table.py  test_table_eval.py  test_vectorofvectors.py  test_vovutils.py  test_waveform_table.py  test_waveformtable.py
