[metadata]
name = legend_pydataobj
version = attr: lgdo._version.version
description = LEGEND Python Data Objects
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/legend-exp/legend-pydataobj
author = The LEGEND Collaboration
maintainer = The LEGEND Collaboration
license = GPL-3.0
license_file = LICENSE
license_files = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: MacOS
    Operating System :: POSIX
    Operating System :: Unix
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Scientific/Engineering :: Physics
    Topic :: Software Development

[options]
packages = find:
python_requires = >=3.9
include_package_data = True
package_dir =
    = src
zip_safe = False

[options.packages.find]
where = src

[options.extras_require]
all =
    legend-pydataobj[docs,test]
docs =
    furo
    myst-parser
    sphinx
    sphinx-copybutton
test =
    pre-commit
    pytest>=6.0
    pytest-cov

[flake8]
extend-ignore = E203, E501, D10
