[metadata]
name = legend_pydataobj
version = attr: lgdo._version.version
description = LEGEND Python Data Objects
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/legend-exp/legend-pydataobj
author = The LEGEND Collaboration
maintainer = The LEGEND Collaboration
license = GPL-3.0
license_files = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: MacOS
    Operating System :: POSIX
    Operating System :: Unix
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Scientific/Engineering :: Physics
    Topic :: Software Development

[options]
packages = find:
install_requires =
    awkward
    colorlog
    h5py>=3.2
    hdf5plugin
    numba!=0.53.*,!=0.54.*
    numexpr
    numpy>=1.21
    pandas>=1.4.4
    parse
    pint
python_requires = >=3.9
include_package_data = True
package_dir =
    = src
zip_safe = False

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    lh5ls = lgdo.cli:lh5ls

[options.extras_require]
all =
    legend-pydataobj[docs,test]
docs =
    furo
    jupyter
    myst-parser
    nbsphinx
    sphinx
    sphinx-copybutton
    sphinx-inline-tabs
test =
    pre-commit
    pylegendtestdata
    pytest>=6.0
    pytest-cov

[flake8]
extend-ignore = E203, E501, D10
